--- a/VKBaseProject.vcxproj.filters
+++ b/VKBaseProject.vcxproj.filters
@@ -25,9 +25,6 @@
     <Filter Include="Source\ImGUI">
       <UniqueIdentifier>{a76c9db7-7501-4ce3-a2a0-86d8bbae4141}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Source\Controller">
-      <UniqueIdentifier>{2d4bf4fd-02eb-491b-a600-9e0bc286a2ae}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Source\Scene">
       <UniqueIdentifier>{0bc24c8c-7b7a-474c-8b1c-f0685be4997e}</UniqueIdentifier>
     </Filter>
@@ -54,6 +51,15 @@
     </Filter>
     <Filter Include="Header\Renderer">
       <UniqueIdentifier>{796aac14-8112-48c5-bdff-3c88c598ab56}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source\Renderer">
+      <UniqueIdentifier>{955fc731-f9f8-4833-a499-c4846499cc3b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header\Renderer\Vulkan">
+      <UniqueIdentifier>{80c65433-d5b5-4980-bd16-dde7c24b55ee}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source\Renderer\Vulkan">
+      <UniqueIdentifier>{8da65224-5c7e-4d39-8ded-2454cd26675e}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -116,9 +122,6 @@
     <ClCompile Include="Source\Materials.cpp">
       <Filter>Source</Filter>
     </ClCompile>
-    <ClCompile Include="Source\Window.cpp">
-      <Filter>Source\Window</Filter>
-    </ClCompile>
     <ClCompile Include="Source\WindowsPlatform.cpp">
       <Filter>Source\Window</Filter>
     </ClCompile>
@@ -130,6 +133,27 @@
     </ClCompile>
     <ClCompile Include="Source\Application.cpp">
       <Filter>Source\Window</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\ImGUILayer.cpp">
+      <Filter>Source\Layer</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\VulkanRenderer.cpp">
+      <Filter>Source\Renderer\Vulkan</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\VulkanSwapChain.cpp">
+      <Filter>Source\Renderer\Vulkan</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\VulkanTool.cpp">
+      <Filter>Source\Renderer\Vulkan</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\VulkanBuffer.cpp">
+      <Filter>Source\Renderer\Vulkan</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\VulkanDevice.cpp">
+      <Filter>Source\Renderer\Vulkan</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\VulkanTexture.cpp">
+      <Filter>Source\Renderer\Vulkan</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -213,6 +237,33 @@
     </ClInclude>
     <ClInclude Include="Source\Headers\RenderApplication.h">
       <Filter>Header</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Headers\ImGUILayer.h">
+      <Filter>Header\Layer</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Headers\Vulkan\VulkanBuffer.h">
+      <Filter>Header\Renderer\Vulkan</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Headers\Vulkan\VulkanDevice.h">
+      <Filter>Header\Renderer\Vulkan</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Headers\Vulkan\VulkanInitializer.hpp">
+      <Filter>Header\Renderer\Vulkan</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Headers\Vulkan\VulkanRenderer.h">
+      <Filter>Header\Renderer\Vulkan</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Headers\Vulkan\VulkanSwapChain.h">
+      <Filter>Header\Renderer\Vulkan</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Headers\Vulkan\VulkanTexture.h">
+      <Filter>Header\Renderer\Vulkan</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Headers\Vulkan\VulkanTool.h">
+      <Filter>Header\Renderer\Vulkan</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Headers\Vulkan\VulkanFrameBuffer.hpp">
+      <Filter>Header\Renderer\Vulkan</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
